# Meteorology_teaching

./: README.md  metlib.py  plot_synops.py  pyproject.toml  requirements.txt
plot_synops/: __init__.py  metlib.py  plot_synops.py
